<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="@dimen/drive_vs_600"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/drive_shape_dialog_bg_main"
        android:orientation="vertical"
        android:paddingLeft="@dimen/drive_vs_20"
        android:paddingTop="@dimen/drive_vs_15"
        android:paddingRight="@dimen/drive_vs_20"
        android:paddingBottom="@dimen/drive_vs_15">

        <!-- 标题：文件名 -->
        <TextView
            android:id="@+id/tvFileName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="middle"
            android:gravity="center"
            android:paddingBottom="@dimen/drive_vs_15"
            android:singleLine="true"
            android:textColor="@color/drive_dialog_text_primary"
            android:textSize="@dimen/drive_ts_24"
            android:textStyle="bold" />

        <!-- 三个解压选项 -->
        <TextView
            android:id="@+id/btnExtractSameName"
            android:layout_width="match_parent"
            android:layout_height="@dimen/drive_vs_60"
            android:layout_marginBottom="@dimen/drive_vs_8"
            android:background="@drawable/drive_button_dialog_main"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:text="@string/drive_extract_to_same_dir"
            android:textColor="@color/drive_dialog_text_primary"
            android:textSize="@dimen/drive_ts_22" />

        <TextView
            android:id="@+id/btnExtractCurrent"
            android:layout_width="match_parent"
            android:layout_height="@dimen/drive_vs_60"
            android:layout_marginBottom="@dimen/drive_vs_8"
            android:background="@drawable/drive_button_dialog_main"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:text="@string/drive_extract_to_current_dir"
            android:textColor="@color/drive_dialog_text_primary"
            android:textSize="@dimen/drive_ts_22" />

        <TextView
            android:id="@+id/btnExtractCustom"
            android:layout_width="match_parent"
            android:layout_height="@dimen/drive_vs_60"
            android:layout_marginBottom="@dimen/drive_vs_8"
            android:background="@drawable/drive_button_dialog_main"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:text="@string/drive_extract_choose_dir"
            android:textColor="@color/drive_dialog_text_primary"
            android:textSize="@dimen/drive_ts_22" />

        <!-- 进度区域（默认隐藏） -->
        <LinearLayout
            android:id="@+id/progressPanel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/drive_vs_10"
            android:orientation="vertical"
            android:visibility="gone">

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="@dimen/drive_vs_10"
                android:layout_marginBottom="@dimen/drive_vs_5" />

            <TextView
                android:id="@+id/tvProgress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/drive_extract_preparing"
                android:textColor="@color/drive_color_FFFFFF_70"
                android:textSize="@dimen/drive_ts_16" />
        </LinearLayout>

        <!-- 取消按钮 -->
        <TextView
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/drive_vs_10"
            android:background="@drawable/drive_button_dialog_main"
            android:focusable="true"
            android:gravity="center"
            android:paddingLeft="@dimen/drive_vs_40"
            android:paddingTop="@dimen/drive_vs_8"
            android:paddingRight="@dimen/drive_vs_40"
            android:paddingBottom="@dimen/drive_vs_8"
            android:text="@string/drive_btn_cancel"
            android:textColor="@color/drive_dialog_text_primary"
            android:textSize="@dimen/drive_vs_20" />

    </LinearLayout>
</FrameLayout>